fixed link underline being cut off in header

--- a/themes/portfolio-openprops/src/scss/parts/layout/_header.scss
+++ b/themes/portfolio-openprops/src/scss/parts/layout/_header.scss
@@ -130,11 +130,8 @@ header {
 
                 a {
                     display: block;
-
-                    @media (--md-n-below) {
-                        /* prevents underline from being cut off */
-                        margin-bottom: 3px;
-                    }
+                    /* prevents underline from being cut off */
+                    margin-bottom: 3px;
                 }
             }
         }
